release 1.2 (03-2010)
- 

release 1.1.5 (20-01-2010)
- Fixed issue 437
  https://jersey.dev.java.net/issues/show_bug.cgi?id=437
  Support the parsing of the Cache-Control header.
- Fixed issue 454
  https://jersey.dev.java.net/issues/show_bug.cgi?id=454
  Scanning of classes WEB-INF/classes in a war in ear now works for JBoss 5.x
  deployments.
- Fixed issue 456
  https://jersey.dev.java.net/issues/show_bug.cgi?id=456
  UriBuilder can be built from URIs whose authority component is a
  registry based naming authority.
- When tracing is enabled exceptions that are mapped to responses will be
  logged.
- Added formatted support when JSON with natural notation is used
- Fixed issue 362
  https://jersey.dev.java.net/issues/show_bug.cgi?id=362
  Deprecated HttpHelper.getAcceptLangauge and added new method
  HttpHelper.getAcceptLanguage.
- Fixed issue 448
  https://jersey.dev.java.net/issues/show_bug.cgi?id=448
  Ensure that spring 2.5.x dependency version does not depend on Spring 3.0.
- Fixed issue 450
  https://jersey.dev.java.net/issues/show_bug.cgi?id=450
  Equals method of AsyncWebResource was incorrect.
- Fixed issue 202
  https://jersey.dev.java.net/issues/show_bug.cgi?id=202
  Support the quality source parameter, "qs", on media types declared with
  @Produces or @ImplicitProduces.
  The media type, M say, with the highest quality source parameter for a request
  will be selected as the most acceptable media type if X is an acceptable
  media type.
  For example, given the following resource class:
  public class Foo {
    @Produces("application/xml")
    String get() { ... }

    @Produces("text/html;qs=2")
    String get() { ... }
  }
  and given an Accept header of "*/*" or "application/xml, text/*;q=0.8"
  then "text/html" will be produced because the application prefers "text/html"
  over "application/xml" even though the client does not.
  Given an Accept header of "application/xml" then "application/xml" will be
  produced.
- Fixed issue 382